<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/FillContainer.SuperInnerBarrier">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etl_bin"
        style="@style/ConstraintContainer.TextInputStyles.TextInputThemes"
        android:layout_height="wrap_content"
        android:hint="@string/bin_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:placeholderText="@string/placeholder_bin_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_bin"
            style="@style/FillContainer"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputTypeNumber" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etl_dec"
        style="@style/ConstraintContainer.TextInputStyles.TextInputThemes"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/superBarrierValue"
        android:hint="@string/dec_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etl_bin"
        app:placeholderText="@string/placeholder_dec_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_dec"
            style="@style/FillContainer"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputTypeNumber" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etl_oct"
        style="@style/ConstraintContainer.TextInputStyles.TextInputThemes"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/superBarrierValue"
        android:hint="@string/oct_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etl_dec"
        app:placeholderText="@string/placeholder_oct_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_oct"
            style="@style/FillContainer"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputTypeNumber" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etl_hex"
        style="@style/ConstraintContainer.TextInputStyles.TextInputThemes"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/wideBarrierValue"
        android:hint="@string/hex_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etl_oct"
        app:placeholderText="@string/placeholder_hex_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_hex"
            style="@style/FillContainer"
            android:layout_height="wrap_content"
            android:theme="@style/TextInputTypeTextChapCharacters" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_see_formulation"
        style="@style/HugContent"
        android:layout_marginTop="@dimen/superBarrierValue"
        android:text="@string/see_formulation"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etl_hex" />

</androidx.constraintlayout.widget.ConstraintLayout>
