...
    <string name="hint_bcd_keyword">BCD</string>
    <string name="hint_xs3_keyword">XS3</string>
    <string name="hint_gate_list">Gates</string>

    <!-- error description string  -->
    <string name="et_error_format">Please input allowed digit: (%1$d-%2$d)</string>
    <string name="et_error_format_with_symbol">Please input allowed digit and symbol: (%1$d-%2$d) \u0026 (%3$s-%4$s)</string>
    <string name="err_exceeding_limit">The number is exceeds the maximum limit</string>
    <string name="error_radix_namespace">radix=%d</string>
    <string name="nybble_error">Contain %1$s forbidden 4-bit: %2$s</string>


    <!-- string samples -->
...
